--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -36,6 +36,8 @@ jobs:
   build:
     name: Build Kernel for OnePlus Nord 3
     runs-on: ubuntu-latest
+    env:
+      APT_CACHE_DIR: ${{ github.workspace }}/.apt-cache
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -49,10 +51,27 @@ jobs:
           remove-android: 'true'
           remove-haskell: 'true'
 
+      - name: Set up APT Cache
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.APT_CACHE_DIR }}
+          key: ${{ runner.os }}-apt-cache-${{ hashFiles('**/packages.txt') }} # Change packages.txt if you have a file listing packages
+          restore-keys: |
+            ${{ runner.os }}-apt-cache-
+
       - name: Install Dependencies
         run: |
+          echo "Setting up APT to use cache directory: ${{ env.APT_CACHE_DIR }}"
+          sudo mkdir -p ${{ env.APT_CACHE_DIR }}/archives/partial
+          sudo mkdir -p ${{ env.APT_CACHE_DIR }}/lists/partial
+          sudo chown -R _apt:root ${{ env.APT_CACHE_DIR }}
+          sudo chmod -R 700 ${{ env.APT_CACHE_DIR }}
+          
+          echo 'Dir::Cache "${{ env.APT_CACHE_DIR }}";' | sudo tee /etc/apt/apt.conf.d/99-cache
+          
           sudo apt-get update
-          sudo apt-get install -y build-essential git libssl-dev libncurses5-dev bc bison flex libelf-dev ccache
+          sudo apt-get install -y --no-install-recommends \
+            build-essential git libssl-dev libncurses5-dev bc bison flex libelf-dev ccache
 
       - name: Install Toolchain (Fast Build)
         if: ${{ github.event.inputs.FAST_BUILD == 'true' }}
