move to proton-clang

--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -1,4 +1,5 @@
 name: Build Kernel for OnePlus Nord 3 (MT6983)
+
 on:
   workflow_dispatch:
     inputs:
@@ -76,8 +77,8 @@ jobs:
       - name: Install Toolchain (Fast Build)
         if: ${{ github.event.inputs.FAST_BUILD == 'true' }}
         run: |
-          echo "Setting up specific Clang toolchain for Fast Build"
-          git clone https://github.com/ZyCromer/azure-clang --depth=1 clang-toolchain
+          echo "Setting up Proton Clang toolchain for Fast Build"
+          git clone https://github.com/kdrag0n/proton-clang --depth=1 clang-toolchain
 
       - name: Install Toolchain (Standard Build)
         if: ${{ github.event.inputs.FAST_BUILD == 'false' }}
