--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       KERNEL_SOURCE_URL:
-        description: 'URL to the kernel source code'
+        description: 'URL to the GKI kernel source code'
         required: true
         default: 'https://github.com/OnePlusOSS/android_kernel_5.10_oneplus_mt6983'
       KERNEL_SOURCE_BRANCH:
@@ -12,7 +12,7 @@ on:
         required: true
         default: 'oneplus/mt6983_v_15.0.0_nord_3'
       KERNEL_MODULES_URL:
-        description: 'URL to the kernel modules repository'
+        description: 'URL to the vendor kernel modules repository'
         required: true
         default: 'https://github.com/OnePlusOSS/android_kernel_modules_oneplus_mt6983'
       KERNEL_MODULES_BRANCH:
@@ -35,7 +35,7 @@ on:
 
 jobs:
   build:
-    name: Build Kernel for OnePlus Nord 3
+    name: Build GKI Kernel for OnePlus Nord 3
     runs-on: ubuntu-latest
     env:
       APT_CACHE_DIR: ${{ github.workspace }}/.apt-cache
@@ -56,7 +56,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ${{ env.APT_CACHE_DIR }}
-          key: ${{ runner.os }}-apt-cache-${{ hashFiles('**/packages.txt') }} # Change packages.txt if you have a file listing packages
+          key: ${{ runner.os }}-apt-cache-${{ hashFiles('**/packages.txt') }}
           restore-keys: |
             ${{ runner.os }}-apt-cache-
 
@@ -100,11 +100,25 @@ jobs:
         run: |
           git clone --depth=1 --single-branch -b ${{ github.event.inputs.KERNEL_SOURCE_BRANCH }} ${{ github.event.inputs.KERNEL_SOURCE_URL }} kernel
 
-      - name: Clone and Place Kernel Modules
+      - name: Clone Vendor Modules (Sparse Checkout)
         run: |
-          git clone --depth=1 --single-branch -b ${{ github.event.inputs.KERNEL_MODULES_BRANCH }} ${{ github.event.inputs.KERNEL_MODULES_URL }} kernel_modules
-          mkdir -p kernel/vendor
-          mv kernel_modules/* kernel/vendor/
+          echo "Cloning only the 'vendor' directory from the kernel modules repo..."
+          # Create a temporary directory for the sparse checkout
+          mkdir kernel_modules_temp
+          cd kernel_modules_temp
+          # Initialize git, set remote, and configure for sparse checkout
+          git init
+          git remote add origin ${{ github.event.inputs.KERNEL_MODULES_URL }}
+          git config core.sparseCheckout true
+          # Specify that we only want the 'vendor' directory
+          echo "vendor/*" > .git/info/sparse-checkout
+          # Pull only the specified directory from the correct branch
+          git pull --depth=1 origin ${{ github.event.inputs.KERNEL_MODULES_BRANCH }}
+          # Move the cloned vendor directory into the main kernel source tree
+          mv vendor ../kernel/
+          # Clean up the temporary directory
+          cd ..
+          rm -rf kernel_modules_temp
 
       - name: Set Custom Kernel Suffix
         id: suffix_step
@@ -145,8 +159,9 @@ jobs:
           export KBUILD_BUILD_USER="${{ github.event.inputs.BUILD_USER }}"
           
           if [ "${{ github.event.inputs.FAST_BUILD }}" = "true" ]; then
-            echo "Using specific Clang for build"
+            echo "Using specific Clang for GKI build"
             export PATH="${{ github.workspace }}/clang-toolchain/bin:${PATH}"
+            export CLANG_TRIPLE="aarch64-linux-gnu-"
             export CROSS_COMPILE="aarch64-linux-gnu-"
             export CC="ccache clang"
             export LD=ld.lld
@@ -155,28 +170,29 @@ jobs:
             export OBJCOPY=llvm-objcopy
             export OBJDUMP=llvm-objdump
             export STRIP=llvm-strip
-            export CFLAGS="-O3 -fno-PIC -Wno-error"
-            export CXXFLAGS="-O3 -fno-PIC -Wno-error"
           else
             echo "Using GCC for build"
             export CROSS_COMPILE_ARM32=${{ github.workspace }}/gcc-arm/bin/arm-eabi-
             export CROSS_COMPILE=${{ github.workspace }}/gcc-arm64/bin/aarch64-elf-
           fi
           
-          echo "--- Configuring Kernel ---"
+          echo "--- Configuring Kernel for GKI Build ---"
+          # This defconfig is expected to be GKI-aware
           make O=out vendor/oplus_defconfig
 
-          echo "--- Building Kernel Image and Modules ---"
+          echo "--- Building GKI Kernel Image and Vendor Modules ---"
+          # The make command will build the GKI kernel (Image.gz-dtb)
           make -j$(nproc --all) O=out
+          # The 'modules' target will build all necessary vendor kernel modules (.ko files)
           make -j$(nproc --all) O=out modules
 
       - name: Create AnyKernel3 Zip
         run: |
-          # Clone AnyKernel3
+          # This step packages the kernel for flashing via custom recovery.
           git clone https://github.com/osm0sis/AnyKernel3.git
-          # Copy the kernel image
+          # Copy the compiled GKI kernel image
           cp kernel/out/arch/arm64/boot/Image.gz-dtb AnyKernel3/
-          # Create a directory for modules and copy them
+          # Create a directory for vendor modules and copy them
           mkdir -p AnyKernel3/modules
           find kernel/out -type f -name "*.ko" -exec cp -f {} AnyKernel3/modules/ \;
           # Create the flashable zip with the dynamic suffix
