--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -29,7 +29,7 @@ on:
         default: 'LuffyOP_stock_'
       FAST_BUILD:
         type: boolean
-        description: 'Enable fast build using a specific Clang toolchain and ccache?'
+        description: 'Enable fast build using a specific GKI-compatible Clang toolchain and ccache?'
         required: true
         default: true
 
@@ -77,8 +77,9 @@ jobs:
       - name: Install Toolchain (Fast Build)
         if: ${{ github.event.inputs.FAST_BUILD == 'true' }}
         run: |
-          echo "Setting up Proton Clang toolchain for Fast Build"
-          git clone https://github.com/kdrag0n/proton-clang --depth=1 clang-toolchain
+          echo "Setting up AOSP Clang r450784d toolchain for GKI Fast Build"
+          mkdir clang-toolchain
+          curl -sL "https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/tags/android-12.1.0_r27/clang-r450784d.tar.gz" | tar -xzf - -C clang-toolchain
 
       - name: Install Toolchain (Standard Build)
         if: ${{ github.event.inputs.FAST_BUILD == 'false' }}
@@ -157,6 +158,7 @@ jobs:
           export ARCH=arm64
           export SUBARCH=arm64
           export KBUILD_BUILD_USER="${{ github.event.inputs.BUILD_USER }}"
+          export MAKE_FLAGS=""
           
           if [ "${{ github.event.inputs.FAST_BUILD }}" = "true" ]; then
             echo "Using specific Clang for GKI build"
@@ -170,6 +172,8 @@ jobs:
             export OBJCOPY=llvm-objcopy
             export OBJDUMP=llvm-objdump
             export STRIP=llvm-strip
+            # Fix for linker incompatibility on newer hosts
+            export MAKE_FLAGS="HOSTLD=ld"
           else
             echo "Using GCC for build"
             export CROSS_COMPILE_ARM32=${{ github.workspace }}/gcc-arm/bin/arm-eabi-
@@ -178,13 +182,13 @@ jobs:
           
           echo "--- Configuring Kernel for GKI Build ---"
           # This defconfig is expected to be GKI-aware
-          make O=out vendor/oplus_defconfig
+          make O=out ${MAKE_FLAGS} vendor/oplus_defconfig
 
           echo "--- Building GKI Kernel Image and Vendor Modules ---"
           # The make command will build the GKI kernel (Image.gz-dtb)
-          make -j$(nproc --all) O=out
+          make -j$(nproc --all) O=out ${MAKE_FLAGS}
           # The 'modules' target will build all necessary vendor kernel modules (.ko files)
-          make -j$(nproc --all) O=out modules
+          make -j$(nproc --all) O=out ${MAKE_FLAGS} modules
 
       - name: Create AnyKernel3 Zip
         run: |
