--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -165,8 +165,8 @@ jobs:
             export OBJCOPY=llvm-objcopy
             export OBJDUMP=llvm-objdump
             export STRIP=llvm-strip
-            # Fix for linker incompatibility on newer hosts
-            export MAKE_FLAGS="HOSTLD=ld"
+            # Fix for linker incompatibility on newer hosts by using the host's native compiler for host tools
+            export MAKE_FLAGS="HOSTCC=gcc HOSTCXX=g++ HOSTLD=ld"
           else
             echo "Using GCC for build"
             export CROSS_COMPILE_ARM32=${{ github.workspace }}/gcc-arm/bin/arm-eabi-
