--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -151,7 +151,8 @@ jobs:
           export ARCH=arm64
           export SUBARCH=arm64
           export KBUILD_BUILD_USER="${{ github.event.inputs.BUILD_USER }}"
-          export MAKE_FLAGS=""
+          
+          MAKE_ARGS=""
           
           if [ "${{ github.event.inputs.FAST_BUILD }}" = "true" ]; then
             echo "Using specific Clang for GKI build"
@@ -159,13 +160,14 @@ jobs:
             export CLANG_TRIPLE="aarch64-linux-gnu-"
             export CROSS_COMPILE="aarch64-linux-gnu-"
             export CC="ccache clang"
+            export LD=ld.lld
             export AR=llvm-ar
             export NM=llvm-nm
             export OBJCOPY=llvm-objcopy
             export OBJDUMP=llvm-objdump
             export STRIP=llvm-strip
             # Fix for linker incompatibility on newer hosts by using the host's native compiler for host tools
-            export MAKE_FLAGS="HOSTCC=gcc HOSTCXX=g++ HOSTLD=ld"
+            MAKE_ARGS="HOSTCC=gcc HOSTCXX=g++ HOSTLD=ld"
           else
             echo "Using GCC for build"
             export CROSS_COMPILE_ARM32=${{ github.workspace }}/gcc-arm/bin/arm-eabi-
@@ -174,13 +176,13 @@ jobs:
           
           echo "--- Configuring Kernel for GKI Build ---"
           # This defconfig is expected to be GKI-aware
-          make O=out ${MAKE_FLAGS} vendor/oplus_defconfig
+          make O=out ${MAKE_ARGS} vendor/oplus_defconfig
 
           echo "--- Building GKI Kernel Image and Vendor Modules ---"
           # The make command will build the GKI kernel (Image.gz-dtb)
-          make -j$(nproc --all) O=out ${MAKE_FLAGS}
+          make -j$(nproc --all) O=out ${MAKE_ARGS}
           # The 'modules' target will build all necessary vendor kernel modules (.ko files)
-          make -j$(nproc --all) O=out ${MAKE_FLAGS} modules
+          make -j$(nproc --all) O=out ${MAKE_ARGS} modules
 
       - name: Create AnyKernel3 Zip
         run: |
