--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -79,6 +79,12 @@ jobs:
         run: |
           echo "Setting up Proton Clang toolchain for GKI Fast Build"
           git clone https://github.com/kdrag0n/proton-clang --depth=1 clang-toolchain
+          
+      - name: Remove LLD binary from Proton Clang to prevent host tool build errors
+        if: ${{ github.event.inputs.FAST_BUILD == 'true' }}
+        run: |
+          echo "Removing Proton Clang's internal ld to prevent host linker issues"
+          rm -f clang-toolchain/bin/ld
 
       - name: Install Toolchain (Standard Build)
         if: ${{ github.event.inputs.FAST_BUILD == 'false' }}
@@ -168,6 +174,7 @@ jobs:
             export STRIP=llvm-strip
             # Fix for linker incompatibility on newer hosts by using the host's native compiler for host tools
             MAKE_ARGS="HOSTCC=gcc HOSTCXX=g++ HOSTLD=ld"
+            MAKE_ARGS="HOSTCC=gcc HOSTCXX=g++ HOSTLD=/usr/bin/ld"
           else
             echo "Using GCC for build"
             export CROSS_COMPILE_ARM32=${{ github.workspace }}/gcc-arm/bin/arm-eabi-
