--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -36,7 +36,7 @@ on:
 jobs:
   build:
     name: Build GKI Kernel for OnePlus Nord 3
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       APT_CACHE_DIR: ${{ github.workspace }}/.apt-cache
     steps:
@@ -72,19 +72,13 @@ jobs:
           
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
-            build-essential git libssl-dev libncurses5-dev bc bison flex libelf-dev ccache
+            build-essential git libssl-dev libncurses5-dev bc bison flex libelf-dev ccache gcc-aarch64-linux-gnu
 
       - name: Install Toolchain (Fast Build)
         if: ${{ github.event.inputs.FAST_BUILD == 'true' }}
         run: |
           echo "Setting up Proton Clang toolchain for GKI Fast Build"
           git clone https://github.com/kdrag0n/proton-clang --depth=1 clang-toolchain
-          
-      - name: Remove LLD binary from Proton Clang to prevent host tool build errors
-        if: ${{ github.event.inputs.FAST_BUILD == 'true' }}
-        run: |
-          echo "Removing Proton Clang's internal ld to prevent host linker issues"
-          rm -f clang-toolchain/bin/ld
 
       - name: Install Toolchain (Standard Build)
         if: ${{ github.event.inputs.FAST_BUILD == 'false' }}
@@ -173,7 +167,7 @@ jobs:
             export OBJDUMP=llvm-objdump
             export STRIP=llvm-strip
             # Fix for linker incompatibility on newer hosts by using the host's native compiler for host tools
-            MAKE_ARGS="HOSTCC=gcc HOSTCXX=g++ HOSTLD=/usr/bin/ld"
+            MAKE_ARGS="HOSTCC=gcc HOSTCXX=g++ HOSTLD=ld"
           else
             echo "Using GCC for build"
             export CROSS_COMPILE_ARM32=${{ github.workspace }}/gcc-arm/bin/arm-eabi-
