kernel_module cloning fix

--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -103,7 +103,7 @@ jobs:
       - name: Clone Vendor Modules
         run: |
           echo "Cloning the vendor modules repo directly into kernel/vendor..."
-          git clone --depth=1 --single-branch -b ${{ github.event.inputs.KERNEL_MODULES_BRANCH }} ${{ github.event.inputs.KERNEL_MODULES_URL }} kernel/vendor
+          git clone --depth=1 --single-branch -b ${{ github.event.inputs.KERNEL_MODULES_BRANCH }} ${{ github.event.inputs.KERNEL_MODULES_URL }} vendor
 
       - name: Set Custom Kernel Suffix
         id: suffix_step
