--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -171,7 +171,7 @@ jobs:
             export OBJDUMP=llvm-objdump
             export STRIP=llvm-strip
             # Fix for linker incompatibility on newer hosts by using the host's native compiler for host tools
-            MAKE_ARGS="HOSTCC=gcc HOSTCXX=g++ HOSTLD=ld"
+            MAKE_ARGS=""
           else
             echo "Using GCC for build"
             export CROSS_COMPILE_ARM32=${{ github.workspace }}/gcc-arm/bin/arm-eabi-
