--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -36,7 +36,7 @@ on:
 jobs:
   build:
     name: Build GKI Kernel for OnePlus Nord 3
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       CCACHE_DIR: ${{ github.workspace }}/.ccache
       CCACHE_MAXSIZE: 8G
@@ -87,13 +87,23 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ${{ env.CCACHE_DIR }}
-          key: ccache-${{ runner.os }}-${{ github.ref_name }}-${{ github.workflow }}
+          key: ccache-${{ runner.os }}-${{ github.ref_name }}-${{ github.event.inputs.FILE }}-${{ env.BUILD_METHOD }}-${{ github.event.inputs.FAST_BUILD == 'true' && 'alpha' || 'beta' }}-15
 
       - name: Initialize Ccache
         run: |
+          INIT_FLAG="${{ env.CCACHE_DIR }}/.ccache_initialized"
           if command -v ccache >/dev/null 2>&1; then
-            echo "Initializing ccache..."
-            ccache -M ${{ env.CCACHE_MAXSIZE }}
+            if [ ! -f "$INIT_FLAG" ]; then
+              echo "Initializing ccache (${{ env.CCACHE_DIR }})..."
+              mkdir -p "${{ env.CCACHE_DIR }}"
+              ccache -M ${{ env.CCACHE_MAXSIZE }}
+              touch "$INIT_FLAG"
+              echo "ccache initialization complete"
+            else
+              echo "ccache already initialized, skipping"
+            fi
+          else
+            echo "ccache not installed, skipping"
           fi
           ccache -s
 
@@ -102,7 +112,7 @@ jobs:
         run: |
           echo "Setting up Proton Clang toolchain for GKI Fast Build"
           git clone https://github.com/kdrag0n/proton-clang --depth=1 clang-toolchain
-
+          
       - name: Install Toolchain (Standard Build)
         if: ${{ github.event.inputs.FAST_BUILD == 'false' }}
         run: |
@@ -171,7 +181,7 @@ jobs:
             export OBJDUMP=llvm-objdump
             export STRIP=llvm-strip
             # Fix for linker incompatibility on newer hosts by using the host's native compiler for host tools
-            MAKE_ARGS=""
+            MAKE_ARGS="HOSTCC=gcc HOSTCXX=g++ HOSTLD=ld"
           else
             echo "Using GCC for build"
             export CROSS_COMPILE_ARM32=${{ github.workspace }}/gcc-arm/bin/arm-eabi-
@@ -181,13 +191,13 @@ jobs:
           echo "--- Configuring Kernel for GKI Build ---"
           # This defconfig is expected to be GKI-aware
           # The -C flag tells make to change to the 'kernel' directory before doing anything
-          make -C kernel O=kernel/out ${MAKE_ARGS} vendor/oplus_defconfig
+          make -C kernel O=out ${MAKE_ARGS} vendor/oplus_defconfig
 
           echo "--- Building GKI Kernel Image and Vendor Modules ---"
           # The make command will build the GKI kernel (Image.gz-dtb)
-          make -C kernel O=kernel/out -j$(nproc --all) ${MAKE_ARGS}
+          make -C kernel O=out -j$(nproc --all) ${MAKE_ARGS}
           # The 'modules' target will build all necessary vendor kernel modules (.ko files)
-          make -C kernel O=kernel/out -j$(nproc --all) ${MAKE_ARGS} modules
+          make -C kernel O=out -j$(nproc --all) ${MAKE_ARGS} modules
 
       - name: Create AnyKernel3 Zip
         run: |
