--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -132,12 +132,29 @@ jobs:
         run: |
           git clone --depth=1 --single-branch -b ${{ github.event.inputs.KERNEL_SOURCE_BRANCH }} ${{ github.event.inputs.KERNEL_SOURCE_URL }} kernel
 
-      - name: Clone Vendor Modules into kernel tree
+      - name: Clone Vendor Modules
         run: |
-          echo "Cloning vendor modules into kernel/kernel_modules …"
-          git clone --depth=1 --single-branch \
-            -b ${{ github.event.inputs.KERNEL_MODULES_BRANCH }} \
-            ${{ github.event.inputs.KERNEL_MODULES_URL }}  kernel/kernel_modules
+          echo "Cloning the vendor modules repo into a sibling 'vendor' directory..."
+          git clone --depth=1 --single-branch -b ${{ github.event.inputs.KERNEL_MODULES_BRANCH }} ${{ github.event.inputs.KERNEL_MODULES_URL }} vendor
+      
+      - name: Resolve Symbolic Links
+        run: |
+          echo "Replacing symbolic links with actual files..."
+          cd kernel
+          find . -type l | while read link; do
+            target=$(readlink "$link")
+            # Resolve the absolute path of the target file
+            abs_target=$(realpath -m "../${target}")
+            if [ -e "$abs_target" ]; then
+              # Replace the symlink with the actual file
+              cp --remove-destination "$abs_target" "$link"
+            else
+              echo "Warning: Symlink target not found for $link -> $target"
+            fi
+          done
+          cd ..
+          # The vendor directory is no longer needed
+          rm -rf vendor
 
       - name: Set Custom Kernel Suffix
         id: suffix_step
@@ -172,15 +189,15 @@ jobs:
 
       - name: Configure and Build Kernel
         run: |
+          cd kernel
           export ARCH=arm64
           export SUBARCH=arm64
           export KBUILD_BUILD_USER="${{ github.event.inputs.BUILD_USER }}"
-
-          echo "--- Generating defconfig with system GCC (host tools) ---"
-          make -C kernel O=out vendor/oplus_defconfig
-
+          
+          MAKE_ARGS=""
+          
           if [ "${{ github.event.inputs.FAST_BUILD }}" = "true" ]; then
-            echo "Using Proton Clang for target build"
+            echo "Using specific Clang for GKI build"
             export PATH="${{ github.workspace }}/clang-toolchain/bin:${PATH}"
             export CLANG_TRIPLE="aarch64-linux-gnu-"
             export CROSS_COMPILE="aarch64-linux-gnu-"
@@ -191,16 +208,23 @@ jobs:
             export OBJCOPY=llvm-objcopy
             export OBJDUMP=llvm-objdump
             export STRIP=llvm-strip
+            # Fix for linker incompatibility on newer hosts by using the host's native compiler for host tools
+            MAKE_ARGS="HOSTCC=gcc HOSTCXX=g++ HOSTLD=/usr/bin/ld"
           else
-            echo "Using GCC for target build"
+            echo "Using GCC for build"
             export CROSS_COMPILE_ARM32=${{ github.workspace }}/gcc-arm/bin/arm-eabi-
             export CROSS_COMPILE=${{ github.workspace }}/gcc-arm64/bin/aarch64-elf-
           fi
+          
+          echo "--- Configuring Kernel for GKI Build ---"
+          # This defconfig is expected to be GKI-aware
+          make O=out ${MAKE_ARGS} vendor/oplus_defconfig
 
-          echo "--- Building kernel image and modules ---"
-          make -C kernel O=out -j$(nproc)
-          make -C kernel O=out -j$(nproc) modules
-
+          echo "--- Building GKI Kernel Image and Vendor Modules ---"
+          # The make command will build the GKI kernel (Image.gz-dtb)
+          make O=out -j$(nproc --all) ${MAKE_ARGS}
+          # The 'modules' target will build all necessary vendor kernel modules (.ko files)
+          make O=out -j$(nproc --all) ${MAKE_ARGS} modules
 
       - name: Create AnyKernel3 Zip
         run: |
