--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -90,7 +90,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ${{ env.CCACHE_DIR }}
-          key: ccache-${{ runner.os }}-${{ github.workflow }}-${{ github.ref_name }}-${{ github.event.inputs.FAST_BUILD }}
+          key: ccache-${{ runner.os }}-${{ github.workflow }}-${{ github.ref_name }}-${{ github.sha }}
           restore-keys: |
             ccache-${{ runner.os }}-${{ github.workflow }}-${{ github.ref_name }}-
 
@@ -137,24 +137,22 @@ jobs:
           echo "Cloning the vendor modules repo into a sibling 'vendor' directory..."
           git clone --depth=1 --single-branch -b ${{ github.event.inputs.KERNEL_MODULES_BRANCH }} ${{ github.event.inputs.KERNEL_MODULES_URL }} vendor
       
-      - name: Resolve Symbolic Links
+      - name: Patch Kernel Kconfig Files
         run: |
-          echo "Replacing symbolic links with actual files..."
-          cd kernel
-          find . -type l | while read link; do
-            target=$(readlink "$link")
-            # Resolve the absolute path of the target file
-            abs_target=$(realpath -m "../${target}")
-            if [ -e "$abs_target" ]; then
-              # Replace the symlink with the actual file
-              cp --remove-destination "$abs_target" "$link"
-            else
-              echo "Warning: Symlink target not found for $link -> $target"
-            fi
-          done
-          cd ..
-          # The vendor directory is no longer needed
-          rm -rf vendor
+          echo "Patching Kconfig files to fix incorrect source paths..."
+          sed -i 's|source "kernel/oplus_cpu/sched/Kconfig"|source "../vendor/oplus/oplus_cpu/sched/Kconfig"|g' kernel/init/Kconfig || true
+          sed -i 's|source "drivers/power/oplus/Kconfig"|source "../vendor/oplus/kernel/charger/Kconfig"|g' kernel/drivers/power/Kconfig || true
+          sed -i 's|source "drivers/misc/sim_detect/Kconfig"|source "../vendor/oplus/kernel/misc/sim_detect/Kconfig"|g' kernel/drivers/misc/Kconfig || true
+          sed -i 's|source "drivers/input/touchscreen/oplus_touchscreen_v2/Kconfig"|source "../vendor/oplus/kernel/touchpanel/oplus_touchscreen_v2/Kconfig"|g' kernel/drivers/input/touchscreen/Kconfig || true
+          sed -i 's|source "drivers/soc/oplus/hans/Kconfig"|source "../vendor/oplus/kernel/hans/Kconfig"|g' kernel/drivers/soc/oplus/Kconfig || true
+          sed -i 's|source "drivers/android/oplus_binder/Kconfig"|source "../vendor/oplus/kernel/ipc/Kconfig"|g' kernel/drivers/android/Kconfig || true
+          sed -i 's|source "net/oplus_modules/Kconfig"|source "../vendor/oplus/kernel/network/Kconfig"|g' kernel/net/Kconfig || true
+          sed -i 's|source "mm/oplus_mm/Kconfig"|source "../vendor/oplus/kernel/mm/Kconfig"|g' kernel/mm/Kconfig || true
+          sed -i 's|source "kernel/locking/oplus_locking/Kconfig"|source "../vendor/oplus/kernel/synchronize/Kconfig"|g' kernel/kernel/locking/Kconfig || true
+          sed -i 's|source "drivers/dma-buf/heaps/mm_boost_pool/Kconfig"|source "../vendor/oplus/kernel/oplus_performance_5.10/misc/mm_boost_pool/Kconfig"|g' kernel/drivers/dma-buf/heaps/Kconfig || true
+          sed -i 's|source "drivers/input/uff_fp_drivers/Kconfig"|source "../vendor/oplus/secure/biometrics/fingerprints/bsp/uff/driver/Kconfig"|g' kernel/drivers/input/Kconfig || true
+          sed -i 's|source "drivers/input/fp_drivers/Kconfig"|source "../vendor/oplus/secure/biometrics/fingerprints/bsp/drivers_kernel/component3.0/mtk/Kconfig"|g' kernel/drivers/input/Kconfig || true
+
 
       - name: Set Custom Kernel Suffix
         id: suffix_step
@@ -189,7 +187,6 @@ jobs:
 
       - name: Configure and Build Kernel
         run: |
-          cd kernel
           export ARCH=arm64
           export SUBARCH=arm64
           export KBUILD_BUILD_USER="${{ github.event.inputs.BUILD_USER }}"
@@ -218,13 +215,14 @@ jobs:
           
           echo "--- Configuring Kernel for GKI Build ---"
           # This defconfig is expected to be GKI-aware
-          make O=out ${MAKE_ARGS} vendor/oplus_defconfig
+          # The -C flag tells make to change to the 'kernel' directory before doing anything
+          make -C kernel O=out ${MAKE_ARGS} vendor/oplus_defconfig
 
           echo "--- Building GKI Kernel Image and Vendor Modules ---"
           # The make command will build the GKI kernel (Image.gz-dtb)
-          make O=out -j$(nproc --all) ${MAKE_ARGS}
+          make -C kernel O=out -j$(nproc --all) ${MAKE_ARGS}
           # The 'modules' target will build all necessary vendor kernel modules (.ko files)
-          make O=out -j$(nproc --all) ${MAKE_ARGS} modules
+          make -C kernel O=out -j$(nproc --all) ${MAKE_ARGS} modules
 
       - name: Create AnyKernel3 Zip
         run: |
