--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -171,41 +171,43 @@ jobs:
       - name: Configure and Build Kernel
         working-directory: kernel
         run: |
-          export ARCH=arm64
-          export SUBARCH=arm64
-          export KBUILD_BUILD_USER="${{ github.event.inputs.BUILD_USER }}"
-          
-          MAKE_ARGS=""
-          
-          if [ "${{ github.event.inputs.FAST_BUILD }}" = "true" ]; then
-            echo "Using specific Clang for GKI build"
-            export PATH="${{ github.workspace }}/clang-toolchain/bin:${PATH}"
-            export CLANG_TRIPLE="aarch64-linux-gnu-"
-            export CROSS_COMPILE="aarch64-linux-gnu-"
-            export CC="ccache clang"
-            export LD=ld.lld
-            export AR=llvm-ar
-            export NM=llvm-nm
-            export OBJCOPY=llvm-objcopy
-            export OBJDUMP=llvm-objdump
-            export STRIP=llvm-strip
-            # Fix for linker incompatibility on newer hosts by using the host's native compiler for host tools
-            MAKE_ARGS="HOSTCC=gcc HOSTCXX=g++ HOSTLD=/usr/bin/ld"
-          else
-            echo "Using GCC for build"
-            export CROSS_COMPILE_ARM32=${{ github.workspace }}/gcc-arm/bin/arm-eabi-
-            export CROSS_COMPILE=${{ github.workspace }}/gcc-arm64/bin/aarch64-elf-
-          fi
-          
-          echo "--- Configuring Kernel for GKI Build ---"
-          # This defconfig is expected to be GKI-aware
-          make O=out ${MAKE_ARGS} vendor/oplus_defconfig
+          {
+            export ARCH=arm64
+            export SUBARCH=arm64
+            export KBUILD_BUILD_USER="${{ github.event.inputs.BUILD_USER }}"
+            
+            MAKE_ARGS=""
+            
+            if [ "${{ github.event.inputs.FAST_BUILD }}" = "true" ]; then
+              echo "Using specific Clang for GKI build"
+              export PATH="${{ github.workspace }}/clang-toolchain/bin:${PATH}"
+              export CLANG_TRIPLE="aarch64-linux-gnu-"
+              export CROSS_COMPILE="aarch64-linux-gnu-"
+              export CC="ccache clang"
+              export LD=ld.lld
+              export AR=llvm-ar
+              export NM=llvm-nm
+              export OBJCOPY=llvm-objcopy
+              export OBJDUMP=llvm-objdump
+              export STRIP=llvm-strip
+              # Fix for linker incompatibility on newer hosts by using the host's native compiler for host tools
+              MAKE_ARGS="HOSTCC=gcc HOSTCXX=g++ HOSTLD=/usr/bin/ld"
+            else
+              echo "Using GCC for build"
+              export CROSS_COMPILE_ARM32=${{ github.workspace }}/gcc-arm/bin/arm-eabi-
+              export CROSS_COMPILE=${{ github.workspace }}/gcc-arm64/bin/aarch64-elf-
+            fi
+            
+            echo "--- Configuring Kernel for GKI Build ---"
+            # This defconfig is expected to be GKI-aware
+            make O=out ${MAKE_ARGS} vendor/oplus_defconfig
 
-          echo "--- Building GKI Kernel Image and Vendor Modules ---"
-          # The make command will build the GKI kernel (Image.gz-dtb)
-          make O=out -j$(nproc --all) ${MAKE_ARGS}
-          # The 'modules' target will build all necessary vendor kernel modules (.ko files)
-          make O=out -j$(nproc --all) ${MAKE_ARGS} modules
+            echo "--- Building GKI Kernel Image and Vendor Modules ---"
+            # The make command will build the GKI kernel (Image.gz-dtb)
+            make O=out -j$(nproc --all) ${MAKE_ARGS}
+            # The 'modules' target will build all necessary vendor kernel modules (.ko files)
+            make O=out -j$(nproc --all) ${MAKE_ARGS} modules
+          } 2>&1 | tee build.log
 
       - name: Create AnyKernel3 Zip
         run: |
@@ -220,6 +222,13 @@ jobs:
           cd AnyKernel3
           zip -r9 ../Kernel-OnePlus-Nord-3-${{ steps.suffix_step.outputs.suffix }}.zip * -x .git README.md
 
+      - name: Upload Build Log
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-log
+          path: kernel/build.log
+          
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
