--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -135,7 +135,9 @@ jobs:
       - name: Clone Vendor Modules
         run: |
           echo "Cloning the vendor modules repo directly into kernel/vendor..."
-          git clone --depth=1 --single-branch -b ${{ github.event.inputs.KERNEL_MODULES_BRANCH }} ${{ github.event.inputs.KERNEL_MODULES_URL }} kernel/vendor
+          git clone --depth=1 --single-branch -b ${{ github.event.inputs.KERNEL_MODULES_BRANCH }} ${{ github.event.inputs.KERNEL_MODULES_URL }} vendor
+           echo "Merging vendor kernel directories into kernel tree..."
+            rsync -av vendor/kernel/* kernel/kernel/
 
       - name: Set Custom Kernel Suffix
         id: suffix_step
