--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -132,15 +132,19 @@ jobs:
         run: |
           git clone --depth=1 --single-branch -b ${{ github.event.inputs.KERNEL_SOURCE_BRANCH }} ${{ github.event.inputs.KERNEL_SOURCE_URL }} kernel
 
-      - name: Clone Vendor Modules
+
+      - name: Clone Vendor Modules Repo Separately
         run: |
-          echo "Cloning vendor modules repo directly into kernel..."
           git clone --depth=1 --single-branch -b ${{ github.event.inputs.KERNEL_MODULES_BRANCH }} \
-            ${{ github.event.inputs.KERNEL_MODULES_URL }} kernel
-            
-      - name: Debug check vendor path
+            ${{ github.event.inputs.KERNEL_MODULES_URL }} vendor_modules
+
+      - name: Copy kernel modules & vendor tree into kernel/
         run: |
-          echo "Check for Kconfig:"
+          # Copy all folders (kernel/, kernel-4.14/, kernel-4.19/, kernel-5.15/, vendor/) into kernel/
+          cp -r vendor_modules/* kernel/
+          
+      - name: Debug check final vendor path
+        run: |
           ls -l kernel/vendor/oplus/kernel/cpu/sched/Kconfig
 
 
