--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -112,9 +112,17 @@ jobs:
       - name: Install Toolchain (Fast Build)
         if: ${{ github.event.inputs.FAST_BUILD == 'true' }}
         run: |
-          echo "Setting up AOSP Clang r416183b toolchain..."
+          echo "Cloning AOSP clang r416183b..."
+          git clone --depth=1 \
+            --branch android-11.0.0_r41 \
+            https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86 \
+            clang-prebuilts
+
           mkdir clang-toolchain
-          curl -sL "https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/tags/android-11.0.0_r41/clang-r416183b.tar.gz" | tar -xzf - -C clang-toolchain
+          mv clang-prebuilts/clang-r416183b/* clang-toolchain/
+          rm -rf clang-prebuilts
+          echo "Toolchain installed at $(pwd)/clang-toolchain"
+
       
       - name: Remove LLD binary from Proton Clang to prevent host tool build errors
         if: ${{ github.event.inputs.FAST_BUILD == 'true' }}
@@ -214,17 +222,25 @@ jobs:
               export CROSS_COMPILE_ARM32=${{ github.workspace }}/gcc-arm/bin/arm-eabi-
               export CROSS_COMPILE=${{ github.workspace }}/gcc-arm64/bin/aarch64-elf-
             fi
-            
+
+            # Debug block to check compiler setup
+            echo "=== DEBUG: Toolchain and env vars ==="
+            echo "CC: $CC"
+            echo "CLANG_TRIPLE: $CLANG_TRIPLE"
+            echo "CROSS_COMPILE: $CROSS_COMPILE"
+            echo "PATH: $PATH"
+            which clang || echo "clang binary not found"
+            clang --version || echo "clang not found or failed to run"
+            echo "=== END DEBUG ==="
+
             echo "--- Configuring Kernel for GKI Build ---"
-            # This defconfig is expected to be GKI-aware
             make O=out ${MAKE_ARGS} vendor/oplus_defconfig
 
             echo "--- Building GKI Kernel Image and Vendor Modules ---"
-            # The make command will build the GKI kernel (Image.gz-dtb)
             make O=out -j$(nproc --all) ${MAKE_ARGS}
-            # The 'modules' target will build all necessary vendor kernel modules (.ko files)
             make O=out -j$(nproc --all) ${MAKE_ARGS} modules
           } 2>&1 | tee ../build.log
+
 
       - name: Create AnyKernel3 Zip
         run: |
