--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -195,8 +195,8 @@ jobs:
               export OBJCOPY=llvm-objcopy
               export OBJDUMP=llvm-objdump
               export STRIP=llvm-strip
-              # Fix for linker incompatibility on newer hosts by using the host's native compiler for host tools
-              MAKE_ARGS="HOSTCC=gcc HOSTCXX=g++ HOSTLD=/usr/bin/ld"
+              # Fix for linker incompatibility and format string warnings
+              MAKE_ARGS="HOSTCC=gcc HOSTCXX=g++ HOSTLD=/usr/bin/ld KCFLAGS+=-Wno-error"
             else
               echo "Using GCC for build"
               export CROSS_COMPILE_ARM32=${{ github.workspace }}/gcc-arm/bin/arm-eabi-
@@ -205,7 +205,8 @@ jobs:
             
             echo "--- Configuring Kernel for GKI Build ---"
             # This defconfig is expected to be GKI-aware
-            make O=out ${MAKE_ARGS} gki_defconfig
+            # The path to the defconfig must be relative to the kernel source directory
+            make O=out ${MAKE_ARGS} ../vendor/oplus_defconfig
 
             echo "--- Building GKI Kernel Image and Vendor Modules ---"
             # The make command will build the GKI kernel (Image.gz-dtb)
