--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -205,8 +205,7 @@ jobs:
             
             echo "--- Configuring Kernel for GKI Build ---"
             # This defconfig is expected to be GKI-aware
-            # The path to the defconfig must be relative to the kernel source directory
-            make O=out ${MAKE_ARGS} ../vendor/gki_defconfig
+            make O=out ${MAKE_ARGS} gki_defconfig
 
             echo "--- Building GKI Kernel Image and Vendor Modules ---"
             # The make command will build the GKI kernel (Image.gz-dtb)
